Proper dependency handling now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,11 @@ if (MINGW) # On MinGW we use the provided makefile instad of ./configure, these 
 		SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
 		BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build/luadist
 		BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} -f wx_stc.mingw
-		DEPENDS wxwidgets_mingw
 		INSTALL_COMMAND ""
 	)
+	
+	add_dependencies( wxwidgets_mingw wxwidgets_stc )
+	
 	# Install
 	set ( WX_LIBRARIES 
 		lib/gcc_dll/libwxmsw28_gl.dll
